# read_later

./: .build-tool-versions  .gitignore  .nvim.lua  .taurignore  Cargo.toml  Dockerfile  LICENSE.md  PRIVACY_POLICY.md  README.md  build.sh  entrypoint.sh  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: android_issue.yml  feature_request.yml
.github/workflows/: build_apk.yml
crates/frontend/: Cargo.toml  index.html
crates/frontend/assets/: tabler-icons.min.css
crates/frontend/src/: app.rs  routes.rs  web_utils.rs
crates/frontend/src/components/: article_card.rs  export_button.rs  home_button.rs  import_button.rs  language.rs  link_popup.rs  mod.rs  read_viewer.rs  settings_button.rs  speak_bar.rs  speak_rate.rs
crates/frontend/src/layouts/: alert.rs  fab.rs  mod.rs  share_handler.rs  theme.rs
crates/frontend/src/pages/: add_article.rs  article_detail.rs  home.rs  mod.rs  settings.rs
crates/frontend/src/web_utils/: channel.rs  core.rs  dom.rs  import_export.rs  insets.rs  mod.rs  scroll.rs  settings.rs  share.rs  speak.rs
crates/shared/: Cargo.toml
crates/shared/src/: models.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/capabilities/: default.json  mobile.json
crates/tauri/migrations/: 2025-11-29-000000_add_article_url.sql
crates/tauri/src/: commands.rs  db.rs  lib.rs  models.rs  parse.rs  schema.rs
fastlane/metadata/android/ar/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  images  short_description.txt
fastlane/metadata/android/hi-IN/: full_description.txt  short_description.txt
fastlane/metadata/android/kn-IN/: full_description.txt  short_description.txt
fastlane/metadata/android/pt-PT/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
scripts/: sync-version.cjs  translate.py
src/: App.vue  app.rs  constants.ts  main.rs  main.ts  routes.rs  vite-env.d.ts  web_utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/locales/: ar.toml  en.toml  es.toml  fr.toml  hi.toml  kn.toml  pt.toml  ru.toml  zh-CN.toml  zh.toml
src-tauri/migrations/: 2026-04-03-000000_add_text_content.sql
src-tauri/migrations/2025-11-22-000000_create_tables/: down.sql  up.sql
src-tauri/src/: background_service.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  parse.rs
src-tauri/src/commands/: articles.rs  import_export.rs  import_export_android.rs  mod.rs  settings.rs  speakbar.rs
src/components/: ArticleCard.vue  ConfirmModal.vue  DataTransferButton.vue  ExportButton.vue  FontScale.vue  HomeButton.vue  ImportButton.vue  Language.vue  LanguageSelect.vue  LinkPopup.vue  ListenResetIcon.vue  LocaleBar.vue  ReadViewer.vue  SettingsButton.vue  SpeakBar.vue  SpeakRate.vue  SpeechSettingIcon.vue  TutorialSpeakBar.vue  add_article_modal.rs  fab.rs  home_button.rs  index.ts  mod.rs  settings_button.rs  theme.rs
src/composables/: index.ts  useClipboard.ts  useInset.ts  useMediaSession.ts  useSettings.ts  useShare.ts  useSpeak.ts  useTTS.ts  useTauri.ts
src/layouts/: Alert.vue  Fab.vue  Focus.desktop.vue  Focus.mobile.vue  Locale.vue  Theme.vue  fab.rs  index.ts  mod.rs  share_handler.rs
src/pages/: AddArticle.vue  ArticleDetail.vue  Home.vue  Settings.vue  add_article.rs  article_detail.rs  home.rs  mod.rs  settings.rs
src/router/: index.ts
src/types/: index.ts
