[package]
name = "article-manager"
version = "0.1.42"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.10.1", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
readabilityrs = "0.1.2"
tauri-plugin-opener = "2.0.0"
tauri-plugin-clipboard-manager = "2.2.3"
tauri-plugin-dialog = "^2.4.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-tts = "0.1.9"
tauri-plugin-i18n = "2.0.2"
sqlx = "0.8.0"
kuchikikiki = "0.9"
html5ever = "0.38"
url = "2.5.7"

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-mobile-sharetarget = "2"
tauri-plugin-safe-area-insets-css = "0.1"
tauri-plugin-android-fs = "23.0.1"
tauri-plugin-media-session = { git = "https://github.com/sak96/tauri-plugin-media-session", rev = "6132ca7c6875644a1e5da22062a289d056603c5f" }

[lib]
name = "article_manager_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[package.metadata.rust-analyzer]
cargo.targetDir = "target/analyzer/tauri"
cargo.allTargets = false
procMacro.enable = false
check.workspace = false
cachePriming.enable = false

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link time optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
