[package]
name = "read_later"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Clipboard", "HtmlSelectElement", "Navigator", "ScrollIntoViewOptions", "ScrollBehavior", "DomRect"] }
urlencoding = "2.1.3"
gloo-net = "0.5"
gloo-utils = "0.2"
