[package]
name = "article-manager"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
readabilityrs = "0.1.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-os = "2"
tauri-plugin-sharetarget = { git = "https://github.com/sak96/tauri-plugin-sharetarget" }
tauri-plugin-tts = { git = "https://github.com/sak96/tauri-plugin-tts" }
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
sqlx = "0.8.0"
kuchiki = "0.8"

[lib]
name = "article_manager_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
